results/classifier/118/review/1816614
architecture: 0.833
ppc: 0.747
arm: 0.731
mistranslation: 0.659
device: 0.655
semantic: 0.650
graphic: 0.647
debug: 0.566
files: 0.551
register: 0.541
PID: 0.465
socket: 0.464
x86: 0.456
risc-v: 0.449
TCG: 0.438
vnc: 0.436
network: 0.436
performance: 0.417
KVM: 0.416
hypervisor: 0.397
virtual: 0.390
peripherals: 0.388
kernel: 0.378
user-level: 0.372
VMM: 0.359
boot: 0.331
i386: 0.319
permissions: 0.311
assembly: 0.244
--------------------
arm: 0.875
debug: 0.736
hypervisor: 0.682
files: 0.043
TCG: 0.032
user-level: 0.030
virtual: 0.029
network: 0.023
architecture: 0.022
performance: 0.019
kernel: 0.017
register: 0.014
device: 0.011
PID: 0.011
semantic: 0.010
socket: 0.006
i386: 0.005
ppc: 0.004
peripherals: 0.003
x86: 0.003
assembly: 0.002
KVM: 0.002
vnc: 0.002
boot: 0.001
VMM: 0.001
risc-v: 0.001
graphic: 0.001
permissions: 0.001
mistranslation: 0.001

error: static assertion failed: "arm generic timer needs __Int128 defined"

Hi,

Accordingly to the instruction from https://xilinx-wiki.atlassian.net/wiki/spaces/A/pages/18842060/QEMU we have downloaded the Xilinx QEMU and tried to build it on Ubuntu 16.04.5 32Bit OS. We have done all the following steps from the instruction:
$ git clone git://github.com/Xilinx/qemu.git
$ cd qemu
$ git submodule update --init dtc
$ ./configure --target-list="aarch64-softmmu,microblazeel-softmmu" --enable-fdt --disable-kvm --disable-xen
$ make 
and we have got the error during the compilation:
/home/qemu/include/qemu/int128.h:168:1: error: static assertion failed: "arm generic timer needs __Int128 defined"
 _Static_assert(0, "arm generic timer needs __Int128 defined");
 ^
/home/qemu/rules.mak:66: recipe for target 'stubs/qmp_pc_dimm.o' failed

Could you please help to solve this issue.

Last commit: commit  0b2f6a40631acd7e0cf789ea86b188d76c11149d

Thanks,
Best Regards,
Piotr

Hi there; this bug database is for issues in upstream QEMU. The assert() you have hit is not in upstream QEMU at all, so it must be something that Xilinx have added. For questions about Xilinx's version, you should talk to them, not us.

That said, I think the answer is likely to be "they don't support building for 32-bit hosts", and you'll find that if you use a 64-bit host OS instead it will work.


